# simple-amazon-mcp

./: LICENSE  README.md  mcp.json  pyproject.toml  requirements.txt  test.py
src/simple_amazon_mcp/: formatter.py  models.py  scraper.py  server.py  utils.py
